--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-:root{
+
+:root {
     --bgcolour: #FFFFFF;
     --fgcolour: #E5E5E5;
     --primary-colour: #FCA311;
@@ -8,6 +9,10 @@
 }
 
 .Dashboard-Wrapper{
+    margin-top: 3rem;
+    z-index: -1;
+    position: relative;
+    padding-top: 30px;
     width: 100vw;
     height:fit-content;
     background-color: var(--bgcolour);
