--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -35,7 +35,8 @@
     margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
-    font-size: larger;
+    font-size: x-large;
+    font-weight: 900;
     flex-grow: 1;
     display: flex;
     
@@ -65,7 +66,7 @@
 .nav-item::after {
     content: '';
     display: block;
-    height: 1px;
+    height: 3px;
     width: 0;
     background-color: var(--fgcolour);
    
@@ -93,6 +94,7 @@
         position: relative;
     }
     .nav-menu{
+        margin: 16px;
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -104,6 +106,8 @@
     }
     .nav-menu.active{
         width: 100%;
+        margin: 16px;
+
     }
 
     .nav-item .active{
