--- a/src/Components/searchBar/searchbar.css
+++ b/src/Components/searchBar/searchbar.css
@@ -1,9 +1,10 @@
 .input-wrapper{
     background-color: white;
     width: 100%;
-    border-radius: 10px; 
-    height: 2.5rem;
-    padding: 0 15px;
+    border: none;
+    border-radius: 23px; 
+    height: 40px;
+    padding-left: 56px;
     box-shadow: 0px 0px 8px whitesmoke;
     display: flex;
     align-items: center;
@@ -24,4 +25,19 @@ input:focus {
 
 #search-icon {
     color: goldenrod;
+}
+
+.search-result {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0,0, 0.1);
+    z-index: 1;
+}
+
+.search-result.show {
+    display: block;
 }
