--- a/src/Components/searchBar/searchbar.css
+++ b/src/Components/searchBar/searchbar.css
@@ -1,11 +1,11 @@
 .input-wrapper{
-    background-color: white;
+    background-color: whitesmoke;
     width: 100%;
     border: none;
     border-radius: 23px; 
     height: 40px;
-    padding-left: 56px;
-    box-shadow: 0px 0px 8px whitesmoke;
+    padding-left: 15px;
+    box-shadow: 1px 1px 8px whitesmoke;
     display: flex;
     align-items: center;
 }
@@ -16,7 +16,7 @@ input{
     height: 100%;
     font-size: 1.25rem;
     width: 100%;
-    margin-left: 5px;
+    
 }
 
 input:focus {
@@ -40,4 +40,11 @@ input:focus {
 
 .search-result.show {
     display: block;
+}
+
+.search-btn {
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    
 }
