--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
     --bgcolour: #FFFFFF;
     --fgcolour: #E5E5E5;
@@ -6,7 +8,69 @@
     --textColor: #000000;
 }
 
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.html {
+    height: 100%;
+}
 body{
-    background-color: var(--fgcolour); 
-    
+    font-family:'Poppins', sans-serif;
+    font-size: 16px;
+    height: 100%;
+    background-color: var(--bgcolour); 
+}
+
+.grid {
+    display: grid;
+    grid-template-rows: 6rem 0rem auto 5rem;
+    grid-template-columns: 20% auto 20%;
+    font-size: 1rem;
+    height: 100%;
+}
+
+@media (max-width: 480px) {
+    .grid {
+        grid-template-rows:
+            6rem 6rem 6rem auto 6rem 6rem;
+        grid-template-columns: 1fr;
+    }
+
+    aside,
+    main {
+        grid-column: 1 / 4;
+    }
+}
+
+nav,
+header,
+footer {
+    background: var(--fgcolour);
+    grid-column: 1 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+nav {
+    background: var(--bgcolour)
+}
+
+aside,
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+aside {
+    background: var(--bgcolour);
+}
+
+main {
+    background: var(--bgcolour);
 }
