--- a/src/Articles/Articles.css
+++ b/src/Articles/Articles.css
@@ -1,57 +1,82 @@
-  .article-content {
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: column;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+.main {
+  display: block;
+  margin: 0;
+}
+
+.container {
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: fit-content;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  height: fit-content;
+  width: 100%;
+  margin: 10px;
+  border-radius: 14px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   
-  .article-list {
-    flex: 1 1 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .article-card {
-    width: calc(33.333% - 20px);
-    margin-bottom: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .article-card:hover {
-    transform: translateY(-5px);
-  }
-  
-  .article-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .article-description {
-    font-size: 16px;
-    margin-bottom: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-  }
-  
-  .article-image {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  .pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .pagination a {
-    margin: 0 5px;
-    padding: 5px;
-    border: 1px solid #ccc;}
+}
+
+.card-header img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 10px;
+  min-height: 100px;
+}
+
+.card-body p {
+  font-size: 13px;
+  margin: 0 0 10px;
+}
+
+.author {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.author-info h5 {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+.more-btn {
+  margin: 0 20px;
+  display: flex;
+  justify-content:right;
+  justify-items: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination a {
+  margin: 0 5px;
+  padding: 5px;
+  border: 1px solid #ccc;
+}
