implement searchbar to open coin overview on result

--- a/src/Components/coincard.css
+++ b/src/Components/coincard.css
@@ -39,7 +39,7 @@
     box-shadow: 0 2px 4px rgb(0, 0, 0, 0.1);
     margin-right: 16px;
     margin-bottom: 10px;
-    float:left;
+    float:inline-start;
 }
 
 .coin-card img {
